Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
   inputs:
     command: buildAndPush
     repository: $(imageName)
-    dockerfile: Dockerfile
+    dockerfile: app/Dockerfile
     containerRegistry: DockerServiceConnection
     tags: $(tag)
 
