--- a/app/package.json
+++ b/app/package.json
@@ -5,9 +5,11 @@
   "author": "Shashank Barsin",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "jest": "^26.1.0"
   }
 }
