--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,13 +25,20 @@ steps:
     dockerfile: app/Dockerfile
     containerRegistry: DockerServiceConnection
     tags: $(tag)
+- task: tes
 
-#- task: NodeTool@0
-#  inputs:
-#    versionSpec: '10.x'
-#  displayName: 'Install Node.js'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '10.x'
+  displayName: 'Install Node.js'
 
-#- script: |
-#    npm install
-#    npm run build
-#  displayName: 'npm install and build'
+- script: |
+   npm install
+   npm run coverage
+   npm run build
+  displayName: 'npm install, run coverage and build'
+
+- task: PublishCodeCoverageResults@1
+  inputs:
+    codeCoverageTool: Cobertura
+    summaryFileLocation: $(System.DefaultWorkingDirectory)/coverage/cobertura-coverage.xml
