--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "test": "jest",
     "coverage": "jest --coverage --coverageReporters=cobertura",
-    "build": "npm run build"
+    "build": "node ./build/server.js"
   },
   "dependencies": {
     "express": "^4.16.4",
