--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node server.js",
     "test": "jest",
     "coverage": "jest --coverage --coverageReporters=cobertura",
-    "build": "node ./build/server.js"
+    "build": "webpack"
   },
   "dependencies": {
     "express": "^4.16.4",
     "jest": "^26.1.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   }
 }
